force-app/main/default/objects/Contact_00DDp0000016kkn__dll/Contact_00DDp0000016kkn__dll.object-meta.xml
<CustomObject>
    <label>Contact_00DDp0000016kkn</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>