force-app/main/default/objects/Contact_00DDp0000016kkn__dll/fields/RAVG_Loyalty_ID_c__c.field-meta.xml
<CustomField>
    <fullName>RAVG_Loyalty_ID_c__c</fullName>
    <label>RAVG Loyalty ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RAVG_Loyalty_ID_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>