force-app/main/default/objects/Contact_00DDp0000016kkn__dll/fields/RAVG_Retail_Points_Balance_c__c.field-meta.xml
<CustomField>
    <fullName>RAVG_Retail_Points_Balance_c__c</fullName>
    <label>RAVG Retail Points Balance</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RAVG_Retail_Points_Balance_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>